--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: yellow;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+/* .header{
+  color:yellow;
+  text-align: center;
+} */
+
+body{
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+h1{
+  color: red;
+  text-align: center;
+  font-size: 5 rem;
+}
+
+.list-of-tasks-todo{
+  padding-top: 10px;
+  width: 4 rem;
+}
+
+.task-status{
+  background-color: white;
+  padding: 3px 10px;
+  font-size: 1.0rem;
+  margin-bottom: 6px;
+  display: flex ;
+  align-items: center;
+  justify-content: space-between;
+  color: black;
+
+}
+
+.task-name{
+  cursor: pointer;
+}
+
+.completed-task{
+  text-decoration: line-through;
+}
+
+button{
+  border: 0%;
+  cursor: pointer;
+  font-size: 18px;
+  outline: 0;
+}
+
+.task-status button{
+  color: gray;
+}
+
+input{
+  background: white;
+  padding: 7px 10px;
+  font-size: 1rem;
+  color: black;
+  outline: 0;
+  border: 0;
+  flex:1;
+  }
+
+form{
+    display: flex;
+    padding-top: 10px;
+  }
+form button{
+  color: black;
+  background-color: white;
+  outline: 0;
+  padding: 0 15px;
 }
